2009-09-07  Raja R Harinath  <harinath@hurrynot.org>

	Add some null checks and bounds checks.
	* Regex.cs (default_startat): New.  Replaces the fragment
	'RightToLeft ?  input.Length : 0' with a null-safe variant.
	(Replace) <string variant>: Add null checks for argument strings.
	(Split): Likewise.
	(.ctor): Likewise.  Validate regex options partially.
	(Match): Add null check on string arguments, and bounds checks for
	offset and length arguments.

2009-08-20  Raja R Harinath  <harinath@hurrynot.org>

	Final piece of explicit numeric group support
	* parser.cs (gap): New.
	(GetMapping): Return it.
	(ResolveReferences): Collect explicit numeric groups which may not
	match their indices.
	(HandleExplicitNumericGroups): New.  Process the above list to
	assign appropriate indices, and compute the correct value of 'gap'.

2009-08-20  Raja R Harinath  <harinath@hurrynot.org>

	* syntax.cs (CapturingGroup.Index): Rename from Number to clarify
	semantics.
	(CapturingGroup.CompareTo): New.
	* parser.cs, syntax.cs: Update to changes.

2009-08-20  Raja R Harinath  <harinath@hurrynot.org>

	Implement some more group number/index distinction
	* Regex.cs (gap, Gap): New.
	(Init, InitNewRegex): Update it.
	(GroupNumberFromName): If the 'name' is beyond the gap, it is an
	explicit numeric group -- use the name as the group number.
	(GetGroupIndex): Use a binary search to map a group number to its
	index when we know that they don't match.
	(GroupNumbers): Use group number, not group index, for explicit
	numeric groups.
	* Match.cs (.ctor): Use the newly introduce 'Regex.Gap'.

2009-08-19  Raja R Harinath  <harinath@hurrynot.org>

	* Regex.cs (group_numbers): New.
	(GetGroupNumbers): Move array initialization ...
	(GroupNumbers): ... to new on-demand initializer.

2009-08-19  Raja R Harinath  <harinath@hurrynot.org>

	* Regex.cs (group_names): Rename from _groupNumbersToNameMap.
	(GetGroupNamesArray): Use an IDictionaryEnumerator to walk the